--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Version: 0.1-0
 Date: 2021-03-19
 Title: Dataset package for R package FactorAnalytics
 Author:  Doug Martin, Kirk Li
-Maintainer: Kirk Li (AZURE) <klei@microsoft.com>
+Maintainer: Kirk Li cocokecoli@gmail.com
 Description: 
 License: GPL-2
 Depends:
